KOST-Val 2.0.0.beta3
=====================
- 2.0.0.beta3
- Bugfix PDF/A
- Usability GUI (Ordner/Datei)
- XTrans entfernt
- Draft von den Handbuecher